autogenerate appkey and appEUI